# 924_4FSC0PF003_Summative_MatteoM

./: CMakeLists.txt  README.md  vcpkg.json
1_tests/: CMakeLists.txt  main.cpp
1_tests/include/behaviour_tree/: behaviour_tree.h  composite.h  leaf.h  no_loop.h  node.h  selector.h  status.h  types.h
1_tests/src/: main.cc
1_tests/tests/: .gitignore  test_behaviour_tree.cc
2_factorize/: CMakeLists.txt
2_factorize/asset_manager/: asset_manager.h  assets.h
2_factorize/include/: game.h  game_sprite.h  game_sprite_manager.h
2_factorize/src/: game.cc  game_sprite.cc  game_sprite_manager.cc  main.cc
